[package]
name = "latte"
description = "A database benchmarking tool for Apache Cassandra"
version = "0.13.0"
authors = ["Piotr Kołaczkowski <pkolaczk@datastax.com>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.45"
base64 = "0.13.0"
chrono = { version = "0.4.18", features = ["serde"] }
clap = "=3.0.0-beta.5"
console = "0.15.0"
cpu-time = "1.0.0"
ctrlc = "3.2.1"
err-derive = "0.3"
futures = "0.3"
hdrhistogram = "7.1.0"
hytra = "0.1.2"
itertools = "0.9"
jemallocator = "0.3.2"
lazy_static = "1.4.0"
metrohash = "1.0"
num_cpus = "1.13.0"
parse_duration = "2.1.1"
rand = "0.7.3"
regex = "1.5.4"
rune = { git = "https://github.com/pkolaczk/rune/", branch = "cloneable-unit-and-context" }
scylla = "0.3.1"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
statrs = "0.13.0"
status-line = "0.2.0"
strum = { version = "0.19.5", features = ["derive"] }
strum_macros = "0.19.4"
time = "0.1.44"
thiserror = "1.0.26"
tokio = { version = "1.14", features = ["rt", "rt-multi-thread", "time", "parking_lot"] }
tokio-stream = "0.1"
try-lock = "0.2.3"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.11", features = ["rt", "test-util", "macros"] }

[profile.release]
lto = true
panic = "abort"

[profile.dev-opt]
inherits = "dev"
opt-level = 2

[package.metadata.deb]
maintainer = "Piotr Kołaczkowski <pkolaczk@gmail.com>"
copyright = "2020, Piotr Kołaczkowski <pkolaczk@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """
A database benchmarking tool for Apache Cassandra.
Runs CQL queries in parallel, measures throughput and response times.
Can compute statistical significance of differences between two runs.
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/latte", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/latte/README", "644"],
]