[package]
name = "latte-cli"
description = "A database benchmarking tool for Apache Cassandra"
version = "0.28.0"
authors = ["Piotr Kołaczkowski <pkolaczk@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0"

[[bin]]
name = "latte"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aerospike = { git = "https://github.com/aerospike/aerospike-client-rust.git", branch = "v2", features = ["rt-tokio"] }
tokio-postgres = "0.7.13"
anyhow = "1.0"
base64 = "0.22"
rmp = "0.8"
rmp-serde = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "cargo", "env"] }
console = "0.15.0"
cpu-time = "1.0.0"
err-derive = "0.3"
futures = "0.3"
hdrhistogram = "7.1.0"
hytra = "0.1.2"
itertools = "0.13"
jemallocator = "0.5"
lazy_static = "1.4.0"
metrohash = "1.0"
more-asserts = "0.3"
num_cpus = "1.13.0"
openssl = "0.10.38"
parse_duration = "2.1.1"
pin-project = "1.1"
plotters = { version = "0.3", default-features = false, features = ["line_series", "svg_backend", "full_palette"] }
rand = { version = "0.8", default-features = false, features = ["small_rng", "std"] }
rand_distr = "0.4"
regex = "1.5"
rune = "0.13"
rust-embed = "8"
scylla = { version = "1.0.0" }
search_path = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.17"
status-line = "0.2.0"
strum = { version = "0.26", features = ["derive"] }
time = "0.3"
thiserror = "1.0.26"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "parking_lot", "signal"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
try-lock = "0.2.3"
uuid = { version = "1.1", features = ["v4"] }
walkdir = "2"

[dev-dependencies]
assert_approx_eq = "1"
rstest = "0.22"
tokio = { version = "1", features = ["rt", "test-util", "macros"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.dev-opt]
inherits = "dev"
opt-level = 2

[package.metadata.deb]
name = "latte"
maintainer = "Piotr Kołaczkowski <pkolaczk@gmail.com>"
copyright = "2020, Piotr Kołaczkowski <pkolaczk@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """
A database benchmarking tool for Apache Cassandra.
Runs CQL queries in parallel, measures throughput and response times.
Can compute statistical significance of differences between two runs.
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/latte", "usr/bin/", "755"],
    ["workloads/basic/*.rn", "/usr/share/latte/workloads/basic/", "644"],
    ["workloads/sai/new/*.rn", "/usr/share/latte/workloads/sai/new/", "644"],
    ["workloads/sai/orig/*.rn", "/usr/share/latte/workloads/sai/orig/", "644"],
    ["README.md", "usr/share/doc/latte/README", "644"],
]
